fix minor mode keymap prefix and allow customization (fixes #137)
The official emacs key binding conventions state:

    Don't define C-c letter as a key in Lisp programs. Sequences
    consisting of C-c and a letter (either upper or lower case) are
    reserved for users; they are the only sequences reserved for users,
    so do not block them.

    Changing all the Emacs major modes to respect this convention was a
    lot of work; abandoning this convention would make that work go to
    waste, and inconvenience users. Please comply with it.

but org2blog defines the following keys:

  (define-key org2blog/wp-map (kbd "C-c p") 'org2blog/wp-post-buffer-and-publish)
  (define-key org2blog/wp-map (kbd "C-c P") 'org2blog/wp-post-buffer-as-page-and-publish)
  (define-key org2blog/wp-map (kbd "C-c d") 'org2blog/wp-post-buffer)
  (define-key org2blog/wp-map (kbd "C-c D") 'org2blog/wp-post-buffer-as-page)
  (define-key org2blog/wp-map (kbd "C-c t") 'org2blog/wp-complete-category)

This commit makes the prefix customizable via a new
`org2blog/wp-keymap-prefix' variable, whose default is "C-c M-p".  After
changing it, `org2blog/wp-reload-entry-mode-map' must be called before
it takes effect.

--- a/README.org
+++ b/README.org
@@ -96,7 +96,15 @@
     function.
 
     : M-x customize-group org2blog/wp RET
+*** Key bindings
+In order to conform to Emacs standards, the keybindings for org2blog/wp have been changed.  The old prefix of =C-c= now defaults to =C-c M-p=.  This can now be changed by calling =M-x customize-variable RET org2blog/wp-keymap-prefix=.  To restore the old behaviour, change the value from =C-c M-p+ to =C-c=.  Here's a table of the old and new keybindings, for reference:
+| Old   | New       | Function                                      |
+| C-c d | C-c M-p d | =org2blog/wp-post-buffer=                     |
+| C-c D | C-c M-p D | =org2blog/wp-post-buffer-s-page=              |
+| C-c p | C-c M-p p | =org2blog/wp-post-buffer-and-publish=         |
+| C-c P | C-c M-p P | =org2blog/wp-post-buffer-as-page-and-publish= |
 
+#+TBLFM: $3=org2blog/wp-post-buffer
 *** Logging In
     Use *M-x org2blog/wp-login*.  This function ask you for the name of one
     of the blogs you have configured in the org2blog/wp-blog-alist
