htmlize is not really a dependency anymore.

--- a/tests/org2blog-tests.org
+++ b/tests/org2blog-tests.org
@@ -517,7 +517,7 @@
 #+BEGIN_SRC html
   <div class="org-src-container">
 
-  <pre class="src src-sh"><span style="font-weight: bold;">echo</span> hello &gt; world
+  <pre class="src src-sh">echo hello &gt; world
   </pre>
   </div>
   <p> Test source code</p>
